Docker hub deployment (#400)
Tidies the CircleCI build a bit and auto-deploys to Docker Hub.